# useful-funcs

./: README.md  cabal.project  hie.yaml
docs/: AddressFuncs.html  CryptoFuncs.html  ListFuncs.html  MathFuncs.html  StringFuncs.html  TimeFuncs.html  UsefulFuncs.html  ValueFuncs.html  doc-index.html  index.html  useful-funcs.haddock
docs/useful-funcs/: UsefulFuncs.html  useful-funcs.haddock
useful-funcs/: output  useful-funcs.cabal
useful-funcs/src/: AddressFuncs.hs  CryptoFuncs.hs  GraphFuncs.hs  ListFuncs.hs  MathFuncs.hs  StringFuncs.hs  TimeFuncs.hs  UsefulFuncs.hs  ValueFuncs.hs
useful-funcs/test/: Spec.hs
useful-funcs/test/Groups/: Address.hs  Crypto.hs  Helpers.hs  List.hs  Math.hs  String.hs  Time.hs  Value.hs
