cabal-version: 3.0

name:                   useful-funcs
version:                0
description:            A collection of useful functions.
author:                 The Ancient Kraken
maintainer:             logical.mechanism@protonmail.com
license:                AGPL-3.0-only
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends:
    , base                     ^>=4.14
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck               ^>=2.14.2
    , record-dot-preprocessor  ^>=0.2.11
    , record-hasfield          ^>=1.0
    , vector                   ^>=0.12.3

common project-config
  default-language:     Haskell2010

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      UsefulFuncs
                        ListFuncs
                        ValueFuncs
                        TimeFuncs
                        AddressFuncs
                        StringFuncs
                        MathFuncs
                        CryptoFuncs
                        GraphFuncs

  build-depends:        plutus-ledger-api
                      , plutus-tx

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite useful-func-test
  import:               base, project-config
                      , maybe-Win32
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        Groups.Address
                        Groups.Crypto
                        Groups.List
                        Groups.Math
                        Groups.String
                        Groups.Time
                        Groups.Value

  build-depends:
    , useful-funcs
    , plutus-tx
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2
    , QuickCheck        ^>=2.14.2
    , template-haskell  ^>=2.16.0.0

  hs-source-dirs: test